# python-template

./: .pre-commit-config.yaml  CITATION.cff  CNAME  LICENSE  README.md  mkdocs.yml  pyproject.toml  requirements-dev.txt  setup.cfg  tox.ini
.github/: CONTRIBUTING.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: 01_bug.yml  02_enhancement.yml  03_docs.yml
.github/workflows/: cache.yml  check-docs.yml  docs.yml  publish.yml  style.yml  style.yml.disabled  tests.yml
docs/: advanced.rst  changelog.rst  conf.py  contributing.md  contributing.rst  examples.md  generate_api.py  get-started.md  guides.rst  index.rst  installation.md  known-issues.md  quickstart.rst
docs/contributing/: index.md  issues-pull-requests.md  releases.md
docs/css/: mkdocstrings.css
docs/guides/: example.md  example.rst  index.md
docs/source/: api.rst  foobar.foo.rst
docs/templates/python/material/: module.html.jinja
examples/: README.md  example.py
foobar/: __init__.py  foo.py  py.typed
latest/api/foo/: index.html
latest/guides/example/: index.html
latest/reference/foo/: index.html
main/: 404.html  index.html  objects.inv  sitemap.xml
main/_templates/python/material/: module.html
main/api/: index.html
main/api/SUMMARY/: index.html
main/api/foo/: index.html
main/contributing/: index.html
main/contributing/issues-pull-requests/: index.html
main/contributing/releases/: index.html
main/contributing/style-guide/: index.html
main/examples/: index.html
main/get-started/: index.html
main/guides/: index.html
main/guides/example/: index.html
main/installation/: index.html
main/known-issues/: index.html
main/reference/: index.html
main/reference/SUMMARY/: index.html
main/reference/foo/: index.html
main/search/: search_index.json
testing/: README.md  data.py
tests/: README.md  __init__.py  bar_test.py
