[metadata]
name = foobar
version = 0.0.1
description = foobar python package.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/foobar-author/foobar
author = foobar author
author_email = foobar-author@email.domain
license = MIT
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: Implementation :: CPython
classifier =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
packages = find:
install_requires =
    requests>=2.20.0
    urllib3>=1.25.0
python_requires = >=3.7

[options.packages.find]
exclude =
    tests*
    testing*

[bdist_wheel]
universal = True

[coverage:run]
plugins = covdefaults
omit = examples

[flake8]
docstring-convention = google
per-file-ignores =
    */__init__.py: F401
    */*_test.py: D10
exclude =
    .git,
    .github,
    __pycache__,
    build,
    dist,
    .*egg-info,
    setup.py,
    docs,
    examples/*,
    venv

[mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_configs = true
warn_unused_ignores = true

[mypy-testing.*]
disallow_untyped_defs = false

[mypy-tests.*]
disallow_untyped_defs = false
